# mnemo

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  LICENSE  README.md  TODO.md  auth.d.ts  devenv.nix  devenv.yaml  eslint.config.mjs  flake.nix  main.ts  moon.yml  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.crt  server.key  uno.config.ts  wrangler.toml
.github/: dependabot.yml  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions/latest-release-info/: action.yml
.github/actions/setup-moon/: action.yml
.github/docker/mnemo-arch-aur-builder/: Dockerfile  README.md
.github/docker/mnemo-ubuntu-builder/: Dockerfile
.github/docker/mnemo-void-package-builder/: Dockerfile  README.md
.github/workflows/: android-pr.yml  android-publish.yml  android-push.yml  android.yml  aur.yml  build.yml  build_nix.yml  bump-version.yml  ci.yml  cloudflare-workers.yml  compile-wasm.yml  deploy.yml  desktop-pr.yml  desktop-publish.yml  desktop-push.yml  desktop-tauri.yml  desktop.yml  docker-build.yaml  docker.yml  nix.yml  nuxthub-notes.yml  nuxthub.yml  optimize-wasm.yml  pages.yml  publish-arch-linux-aur.yml  publish.yml  release-checksums.yml  release-drafter.yml  release.yml  void-linux-package.yml  void.yml  winget-publish-release.yml  winget.yml  workers.yml
.moon/: workspace.yml
app/: app.vue
app/assets/: symbols.json
app/assets/scss/: _fonts.scss  _theme.scss  main.scss
app/components/: activity-graph.vue  chat.vue  drawer-items.vue  edit-space.vue  edit-task.vue  editor.vue  embeded-pdf.vue  file-tree-item.vue  html-renderer.vue  new-space.vue  new-task.vue  notifications.vue  package-card.vue  packages.vue  pdf-renderer.vue  pdf-viewer.vue  review-card.vue  review.vue  settings.vue  side-bar.vue  splashscreen.vue  sticky-note.vue  storage-item.vue  storage-root.vue  storage.vue  study.vue  sync.vue  task-item.vue  tasks-masonry.vue  tasks.vue  today.vue
app/components/editor/: index.vue  languague.ts  parser.terms.ts  state.ts  underline.ts  widget.ts
app/composables/: activity.ts  api.ts  async.ts  auth.ts  date.ts  datetime.ts  i18n.ts  log.ts  notes.ts  notifications.ts  progress.ts  review.ts  route.ts  schedule.ts  scroll.ts  spaces.ts  steps.ts  sticky.ts  storage.ts  tasks.ts  typst.ts  ui.ts  updater.ts  websocket.ts
app/composables/events/: index.d.ts  server.ts
app/composables/spaces/: index.d.ts  server.ts  tauri.ts
app/composables/sticky/: index.d.ts  server.ts  tauri.ts
app/composables/storage/: tauri.ts
app/composables/updater/: server.ts  tauri.ts
app/layouts/: auth.vue  default.vue  empty.vue  space.vue
app/lib/editor/: commands.ts  highlight.ts  hover.ts  keymap.ts  language.ts  nested.ts  parser.terms.ts  parser.ts  plugin.ts  popup.ts  tokens.ts  (+4 more)
app/middleware/: auth.global.ts  keep-hash.global.ts
app/pages/: calendar.vue  confirm.vue  export.vue  index.vue  login.vue  render.vue  splashscreen.vue
app/plugins/: api.ts  auth.client.ts  auth.server.ts  storage.ts
backend/: .gitignore  Cargo.toml
backend/common/: Cargo.toml
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/tauri/: Cargo.toml  tauri.conf.json
backend/tauri/capabilities/: default.json  desktop.json
backend/tauri/icons/: icon.icns
backend/tauri/src/: dir.rs  lib.rs  main.rs
backend/tauri/src/handlers/: mod.rs  space.rs  sticky.rs
backend/wasm/: Cargo.toml
backend/wasm/macros/: Cargo.toml
backend/wasm/macros/src/: lib.rs
backend/wasm/macros/typst-packages/bundler/src/: main.rs
backend/wasm/pkg/: mnemo_wasm.d.ts  mnemo_wasm.js  mnemo_wasm_bg.wasm.d.ts  package.json
backend/wasm/src/: lib.rs
backend/wasm/src/typst_handler/: fonts.rs  index_mapper.rs  mod.rs  world.rs  wrappers.rs
i18n/: i18n.config.ts
i18n/locales/: en-US.json  en.json  ja.json  zh.json
modules/m3/: index.ts  types.d.ts  uno.config.ts
modules/mx/: index.ts  types.d.ts  uno.config.ts
patches/: crossws.patch  loro-codemirror.patch  loro-crdt.patch  nitropack.patch  unwasm.patch
platform/: .gitignore  Cargo.toml
platform/aur/: generate-mnemo-bin.sh  generate-mnemo.sh  makepkg-lint.sh
platform/nix/: default.nix  package.nix
platform/tauri/: .gitignore  Cargo.toml  moon.yml  tauri.conf.json  tauri.package.conf.json
platform/tauri/capabilities/: default.json  desktop.json  mobile.json
platform/tauri/icons/: icon.icns
platform/tauri/src/: lib.rs  main.rs
platform/void/: generate-template.sh  tauri.sh
platform/wasm/: Cargo.toml  build.rs  moon.yml
platform/wasm/benches/: math.typ  perf.rs  renderer.rs  test.typ
platform/wasm/pkg/: mnemo_wasm.d.ts  mnemo_wasm.js  mnemo_wasm_bg.wasm.d.ts  package.json
platform/wasm/render/: Cargo.toml
platform/wasm/render/src/: image.rs  lib.rs  paint.rs  shape.rs  text.rs
platform/wasm/src/: fonts.rs  index_mapper.rs  lib.rs  state.rs  theme.rs  world.rs  wrappers.rs
platform/wasm/src/bindings/: mod.rs  results.rs  types.rs
platform/wasm/src/renderer/: chunk.rs  items.rs  mod.rs  recovery.rs
platform/wasm/src/renderer/html/: attr.rs  mod.rs  tag.rs  writer.rs
platform/wasm/src/renderer/paged/: blocks.rs  chunk.rs  items.rs  mod.rs  svg.rs
platform/wasm/src/renderer/svg/: image.rs  mod.rs  paint.rs  shape.rs  text.rs
platform/wasm/src/source/: context.rs  index.rs  mod.rs  sync.rs  synth.rs
platform/wasm/src/typst_handler/: fonts.rs  index_mapper.rs  mod.rs  renderer.rs  state.rs  utf_index_mapper.rs  world.rs  wrappers.rs
platform/wasm/src/typst_handler/renderer/: chunk.rs  items.rs  mod.rs
public/.well-known/: assetlinks.json
schemas/: login.ts
scripts/symbols/: transform.ts
server/api/: chat.post.ts  clear-cache.ts  crdt.ts  download-package.ts  get-package.ts  list-packages.get.ts  list-packages.ts  login.ts  user-storage.ts
server/database/: schema.ts
server/db/: schema.ts
server/middleware/: auth.ts
server/plugins/: auth.ts  session.ts
server/utils/: auth.ts  drizzle.ts  schema.ts  user-storage.ts
shared/: loro.ts
supabase/: config.toml
(+112 files in other folders)
