[workspace]
resolver = "2"
members = ["tauri", "wasm"]
package.version = "0.3.1"
package.edition = "2024"
package.authors = ["Lemuel DLS"]
package.keywords = [""]
package.categories = []
package.repository = "https://github.com/lemueldls/mnemo"
package.license = "AGPL-3.0"

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = true
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
debug = 0
incremental = false
opt-level = 3

[profile.bench]
codegen-units = 1
lto = true

[profile.bench.package."*"]
codegen-units = 1
