[workspace]
members = ["tauri", "wasm"]
package.authors = ["Lemuel DLS"]
package.categories = []
package.description = "Local-first note-taking app leveraging the Typst ecosystem."
package.edition = "2024"
package.keywords = [""]
package.license = "AGPL-3.0"
package.repository = "https://github.com/lemueldls/mnemo"
package.version = "0.3.4"
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
# restriction = { level = "warn", priority = -1 }

# unwrap_used = "warn"

# nursery
option_if_let_else = "allow"
use_self = "allow"

# pedantic
format_push_string = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
used_underscore_items = "allow"

[profile.dev.package]
insta.opt-level = 3

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = true
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
debug = 0
incremental = false
opt-level = 3

[profile.bench]
codegen-units = 1
lto = true

[profile.bench.package."*"]
codegen-units = 1
