[package]
authors.workspace = true
categories.workspace = true
default-run = "mnemo-server"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mnemo-server"
repository.workspace = true
version.workspace = true

# [[bin]]
# name = "mnemo"
# path = "src/main.rs"

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
