[package]
authors.workspace = true
categories.workspace = true
# description = "A Tauri App"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mnemo-tauri"
repository.workspace = true
rust-version = "1.65"
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
mnemo-common = { path = "../common" }

dirs = "5.0.1"
once_cell = "1.19.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-store = "2.0.0-beta.9"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
