[package]
authors.workspace = true
categories.workspace = true
# description = "A Tauri App"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mnemo-tauri"
repository.workspace = true
rust-version = "1.65"
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
dirs = "5.0.1"
once_cell = "1.19.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ulid = { version = "1.1.3", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

tauri = { version = "2.0.0-rc.6", features = [] }
# tauri-plugin-devtools = "2.0.0-beta"
# tauri-plugin-devtools-app = "2.0.0-beta"
# tauri-plugin-dialog = "2.0.0-alpha.2"
# tauri-plugin-process = "2.0.0-alpha.2"
tauri-plugin-store = "2.0.0-rc.2"
# tauri-plugin-updater = "2.0.0-alpha.2"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
