[package]
authors.workspace = true
categories.workspace = true
# description = "A Tauri App"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mnemo-tauri"
repository.workspace = true
rust-version = "1.65"
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
ulid = { version = "1.1.3", features = ["serde"] }

tauri = { version = "2.0.6", features = [] }
# tauri-plugin-devtools = "2.0.0-beta"
# tauri-plugin-devtools-app = "2.0.0-beta"
# tauri-plugin-dialog = "2.0.0-alpha.2"
# tauri-plugin-process = "2.0.0-alpha.2"
tauri-plugin-deep-link = "2.0.1"
tauri-plugin-store = "2.1.0"
# tauri-plugin-updater = "2.0.0-alpha.2"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
