[package]
name = "mnemo-wasm"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
comemo = { git = "https://github.com/typst/comemo", rev = "ddb3773" }
console_error_panic_hook = { version = "0.1.7", optional = true }
data-encoding = "2.5.0"
js-sys = "0.3.67"
memmap2 = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
time = { version = "0.3", features = ["serde"] }
tsify = { version = "0.4.5", features = ["js"] }
# serde_json = "1.0"
palette = "0.7.3"
typst = { version = "0.12.0" }
typst-ide = { version = "0.12.0" }
typst-render = { version = "0.12.0" }
# typst-svg = { version = "0.12.0" }
typst-pdf = { version = "0.12.0" }
# walkdir = "2.3.3"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"

image = { version = "0.25.2", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
] }

# sync-lsp = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# tinymist = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# tinymist-assets = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# tinymist-query = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# tinymist-render = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# typlite = { git = "https://github.com/Myriad-Dreamin/tinymist" }
# typst-preview = { git = "https://github.com/Myriad-Dreamin/tinymist" }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
