[package]
description = "Note-taking app designed to enhance the retention of information."
name = "mnemo"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
ulid = { version = "1.2.1", features = ["serde"] }

tauri = { version = "2.9.0", features = ["devtools"] }
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-opener = "2.5.2"
tauri-plugin-process = "2.3.0"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.0"
tauri-plugin-single-instance = { version = "2.3.4", features = ["deep-link"] }
tauri-plugin-updater = "2.9.0"
