[package]
name = "mnemo-wasm"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm-simd = []

console_error_panic_hook = ["dep:console_error_panic_hook"]
lol_alloc = ["dep:lol_alloc"]

[dependencies]
# collected = { version = "0.4.0" }
# comemo = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.7", optional = true }
# data-encoding = "2.9.0"
flate2 = { version = "1.1.5" }
hashbrown = { version = "0.16.0" }
highway = { version = "1.3.0" }
indoc = { version = "2.0.7" }
itertools = { version = "0.14.0" }
js-sys = { version = "0.3.77", default-features = false }
lol_alloc = { version = "0.4.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
tar = { version = "0.4.44" }
time = { version = "0.3", features = ["serde"] }
tiny-skia = { version = "0.11" }
tsify = { version = "0.5.5", features = ["js"] }
typst = { version = "0.14.0" }
# typst-html = { version = "0.14.0" }
typst-ide = { version = "0.14.0" }
typst-pdf = { version = "0.14.0" }
typst-render = { version = "0.14.0" }
# typst-svg = { version = "0.14.0" }
typst-syntax = { version = "0.14.0" }
wasm-bindgen = "0.2.100"
# web-sys = "0.3.69"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
wasm-bindgen-test = "0.3.50"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "-all"]

[[bench]]
harness = false
name = "renderer"
