[package]
name = "mnemo-wasm"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm-simd = []

console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
comemo = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.7", optional = true }
dashmap = { version = "6.1.0" }
ecow = { version = "0.2.6" }
flate2 = { version = "1.1.8" }
indoc = { version = "2.0.7" }
itertools = { version = "0.14.0" }
js-sys = { version = "0.3", default-features = false }
rustc-hash = { version = "2.1" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
tar = { version = "0.4" }
time = { version = "0.3", features = ["serde", "wasm-bindgen"] }
tiny-skia = { version = "0.11" }
tsify = { version = "0.5.6", features = ["js"] }
typst = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
typst-html = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
typst-ide = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
# typst-pdf = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
# typst-render = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
typst-svg = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
typst-syntax = { git = "https://github.com/typst/typst.git", rev = "7ada6687" }
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # ["-Oz", "-all"]

[[bench]]
harness = false
name = "renderer"
